# anki-chinesisch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
decks/Chinesisch/: deck.json
tests/: conftest.py  crowdanki.py  model.py  test_basic.py  test_pinyin.py  test_zeichenliste.py
