[tool.poetry]
name = "anki-chinesisch"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
poethepoet = "^0.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poe.tasks]
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
